--- a/app/layout/FooterNav.scss
+++ b/app/layout/FooterNav.scss
@@ -1,5 +1,5 @@
 .cxb-link.cxm-footer {
-    padding: 10px;
+    padding: 10px 10px 5px;
     display: inline-block;
     flex: 1 1 0;
     text-align: center;
@@ -16,7 +16,7 @@
     }
 
     .cxb-icon {
-        margin-bottom: 0.5rem;
+        margin-bottom: 5px;
         width: 24px;
         height: 24px;
         font-size: 24px;
