--- a/app/layout/FooterNav.scss
+++ b/app/layout/FooterNav.scss
@@ -4,11 +4,14 @@
     flex: 1 1 0;
     text-align: center;
     font-size: 12px;
+    color: rgba(white, 0.6);
 
     &.cxs-active {
         color: orange;
         font-weight: normal;
         background: rgba(white, 0.1);
+
+        box-shadow: 0 0 2px rgba(black, 0.1);
     }
 
     &:hover {
