--- a/app/routes/calendar/index.scss
+++ b/app/routes/calendar/index.scss
@@ -16,7 +16,7 @@
     }
 
     td {
-        padding: 1.5rem 0.5rem;
+        padding: 1rem 0.5rem;
         text-align: center;
         position: relative;
         border: 1px solid rgba(white, 0.1);
@@ -37,4 +37,8 @@
         top: 2px;
         opacity: 0.5;
     }
+}
+
+.appointment {
+    border-bottom: 1px solid rgba(white, 0.1);
 }
