Switch to using compiled CSS for faster loading on CodeSandbox

--- a/app/index.scss
+++ b/app/index.scss
@@ -1,22 +1,14 @@
-$cx-include-global-rules: true;
 
-@import "~cx-theme-dark/src/variables";
+html {
+    background: white;
+}
 
-
-$cx-element-style-map: cx-deep-map-merge($cx-element-style-map, (
-    html: (
-        background: white,
-    ),
-    body: (
-        max-width: 500px,
-        max-height: 1024px,
-        background: black,
-        margin: auto
-    )
-));
-
-
-@import "~cx-theme-dark/src/index";
+body {
+    max-width: 500px;
+    max-height: 1024px;
+    background: black;
+    margin: auto;
+}
 
 @import "components/index";
 @import "layout/index";
